--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <title>Test Page</title>
 </head>
 <body>
-    <h1>I'm a big heading</h1>
+    <h1>I'm a big <b>bold</b>heading. Look at me!</h1>
     <p>Hey, I'm a paragraph element. Cool, huh?</p>
     <a href="https://google.com">Click me! I'm a link!</a>
     <p>My name is:<br>
